Add clouflare analytics

--- a/public/index.html
+++ b/public/index.html
@@ -19,3 +19,8 @@
 <div id="root"></div>
 </body>
 </html>
+
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "f40ac25185694898bd89a622459b9357"}'>
+</script>
+<!-- End Cloudflare Web Analytics -->
